--- a/www/sites/all/themes/lynchburg/css/user-styles.css
+++ b/www/sites/all/themes/lynchburg/css/user-styles.css
@@ -147,6 +147,10 @@ table {
 .caption_text .caption-title {
 	margin-top:5px;
 }
+.caption-text {
+	font-size:12px;
+	line-height:16px;
+}
 .caption-title h2 {
 	margin-bottom:0.75em;
 }
