--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -389,13 +389,13 @@ body.front {
 .pane-jcarousel-article-rotation {
 	height:190px;
 	overflow:hidden;
-	padding:0 0px 96px 0px;
-	margin:0;
+	padding:0 0px 30px 0px;
+	margin:0 0 20px 0;
 	/*background:transparent url(../images/shadow-home-news.png) no-repeat bottom center;*/
 }
 .jcarousel-skin-default {
 	text-align: left;
-	background:#fff;
+	/*background:#fff;
 	background: -moz-linear-gradient(top,  #ffffff 0%, #edeef2 100%); 
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#edeef2));
 	background: -webkit-linear-gradient(top,  #ffffff 0%,#edeef2 100%);
@@ -407,7 +407,7 @@ body.front {
 	-webkit-box-shadow:0 3px 6px 0 rgba(31, 31, 31, .2);
 	-moz-box-shadow:0 3px 6px 0 rgba (31, 31, 31, .2);
 	-khtml-box-shadow:0 3px 6px 0 rgba (31, 31, 31, .2);
-	width:900px;
+	width:900px;*/
 }
 .jcarousel-skin-default .jcarousel-container-horizontal {
 	width: 860px;
@@ -415,8 +415,8 @@ body.front {
 	overflow:hidden;
 	background:transparent url(../images/shadow-carousel-inner.png) no-repeat bottom center;
 	margin:0;
-	padding-left:20px;
-}
+/*	padding-left:20px;
+*/}
 .jcarousel-skin-default .jcarousel-clip-horizontal {
 	width: 860px;
 	overflow: hidden;
@@ -466,6 +466,8 @@ body.front {
 	display: block;
 	width: 33px;
 	height: 33px;
+	padding:0;
+	margin:0;
 	background-image: url(../images/home/arrows.png);
 }
 .jcarousel-skin-default .jcarousel-next-disabled,
@@ -475,9 +477,8 @@ body.front {
 .jcarousel-skin-default .jcarousel-prev-horizontal {
 	position: absolute;
 	top: 90px;
-	left: 4px;
+	left: 0px;
 	background-position: 0 0;
-	margin-left:-15px;
 }
 .jcarousel-skin-default .jcarousel-prev-horizontal:hover {
 	background-position: -32px 0;
@@ -488,9 +489,8 @@ body.front {
 .jcarousel-skin-default .jcarousel-next-horizontal {
 	position: absolute;
 	top: 90px;
-	right:22px;
+	right:0px;
 	background-position: 0 -32px;
-	margin-right:-15px;
 }
 .jcarousel-skin-default .jcarousel-next-horizontal:hover {
 	background-position: -32px -32px;
