--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -395,19 +395,7 @@ body.front {
 }
 .jcarousel-skin-default {
 	text-align: left;
-	/*background:#fff;
-	background: -moz-linear-gradient(top,  #ffffff 0%, #edeef2 100%); 
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#edeef2));
-	background: -webkit-linear-gradient(top,  #ffffff 0%,#edeef2 100%);
-	background: -o-linear-gradient(top,  #ffffff 0%,#edeef2 100%); 
-	background: -ms-linear-gradient(top,  #ffffff 0%,#edeef2 100%); 
-	background: linear-gradient(top,  #ffffff 0%,#edeef2 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#edeef2',GradientType=0 );
-	box-shadow:0 3px 6px 0 rgba(31, 31, 31, .2);
-	-webkit-box-shadow:0 3px 6px 0 rgba(31, 31, 31, .2);
-	-moz-box-shadow:0 3px 6px 0 rgba (31, 31, 31, .2);
-	-khtml-box-shadow:0 3px 6px 0 rgba (31, 31, 31, .2);
-	width:900px;*/
+	
 }
 .jcarousel-skin-default .jcarousel-container-horizontal {
 	width: 860px;
@@ -415,8 +403,7 @@ body.front {
 	overflow:hidden;
 	background:transparent url(../images/shadow-carousel-inner.png) no-repeat bottom center;
 	margin:0;
-/*	padding-left:20px;
-*/}
+}
 .jcarousel-skin-default .jcarousel-clip-horizontal {
 	width: 860px;
 	overflow: hidden;
@@ -427,7 +414,7 @@ body.front {
 	overflow: hidden;
 	list-style: none;
 	border:0px;
-	/*background: #fff none;*/
+
 }
 .jcarousel-skin-default .jcarousel-item-horizontal {
 	margin: 0 4px 0px 4px;
