--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -53,9 +53,10 @@ body.front {
 	background:transparent url(../images/home/big-image4.jpg) no-repeat top center;
 }
 .front .section-content {
-	background: transparent url(../images/home/convex-curve.png) no-repeat top center;
+	background: transparent url(../images/home/convex-curve.png) no-repeat center top;
 	margin:0 auto;
 	margin-top:-23px;
+	border:transparent solid 1px;
 }
 .front .zone-content-wrapper {
 	background:#f9f9f9 url(../images/home/bg3-home.jpg) no-repeat bottom center;
