--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -685,7 +685,6 @@ li.parent.last.open ul li:after, li.parent.last.open li .after, li.parent.open u
 #quicktabs-event_calendar_tabs .item-list .quicktabs-tabs li {
 	float:right;
 }
-
 #quicktabs-event_calendar_tabs .item-list .quicktabs-tabs li.first {
 	float:left;
 }
@@ -698,7 +697,8 @@ li.parent.last.open ul li:after, li.parent.last.open li .after, li.parent.open u
 	padding:6px 9px 8px 9px;
 	zoom:1; /* Fix IE tab layout */
 }
-.quicktabs-tabs li:hover #quicktabs-tab-event_calendar_tabs-0, .quicktabs-tabs li.active #quicktabs-tab-event_calendar_tabs-0 {
+.quicktabs-tabs li:hover #quicktabs-tab-event_calendar_tabs-0, 
+.quicktabs-tabs li.active #quicktabs-tab-event_calendar_tabs-0 {
 	-webkit-border-top-right-radius:6px;
 	-webkit-border-top-left-radius: 6px;
 	-moz-border-radius-topleft: 6px;
@@ -708,7 +708,8 @@ li.parent.last.open ul li:after, li.parent.last.open li .after, li.parent.open u
 	border-bottom:none;
 	background:#fff;
 }
-.quicktabs-tabs li #quicktabs-tab-event_calendar_tabs-1, .quicktabs-tabs li #quicktabs-tab-event_calendar_tabs-2{
+.quicktabs-tabs li #quicktabs-tab-event_calendar_tabs-1, 
+.quicktabs-tabs li #quicktabs-tab-event_calendar_tabs-2 {
 	color:#ffffff;
 	position: relative;
 	text-align: left;
@@ -719,7 +720,9 @@ li.parent.last.open ul li:after, li.parent.last.open li .after, li.parent.open u
 	margin:0 0 0 -34px;
 	z-index: 99;
 }
-.quicktabs-tabs li:hover #quicktabs-tab-event_calendar_tabs-1, .quicktabs-tabs li:hover #quicktabs-tab-event_calendar_tabs-2, .quicktabs-tabs li.active #quicktabs-tab-event_calendar_tabs-1, .quicktabs-tabs li.active #quicktabs-tab-event_calendar_tabs-2{
+.quicktabs-tabs li:hover #quicktabs-tab-event_calendar_tabs-1, 
+.quicktabs-tabs li:hover #quicktabs-tab-event_calendar_tabs-2, 
+.quicktabs-tabs li.active #quicktabs-tab-event_calendar_tabs-1, .quicktabs-tabs li.active #quicktabs-tab-event_calendar_tabs-2 {
 	background-position: -200px 50%;
 	background-color:transparent;
 	margin:0 0 0 -34px;
@@ -728,29 +731,24 @@ li.parent.last.open ul li:after, li.parent.last.open li .after, li.parent.open u
 	color:#000;
 }
 
-.quicktabs-tabs li #quicktabs-tab-event_calendar_tabs-1{
+.quicktabs-tabs li #quicktabs-tab-event_calendar_tabs-1 {
 	-webkit-border-bottom-right-radius:9px;
 	-moz-border-radius-bottomright:9px;
 	border-bottom-right-radius:9px;
 }
-.quicktabs-tabs li:hover #quicktabs-tab-event_calendar_tabs-1, .quicktabs-tabs li.active #quicktabs-tab-event_calendar_tabs-1{
+.quicktabs-tabs li:hover #quicktabs-tab-event_calendar_tabs-1, 
+.quicktabs-tabs li.active #quicktabs-tab-event_calendar_tabs-1 {
 	-webkit-border-bottom-right-radius:9px;
 	-moz-border-radius-bottomright:9px;
 	border-bottom-right-radius:9px;	
 }
 
-.last {
+.quicktabs-tabs li.last #quicktabs-tab-event_calendar_tabs-1,
+.quicktabs-tabs li.last.last #quicktabs-tab-event_calendar_tabs-2 {
 	/* Because I wasnt sure which one would be last, this allows them to be switched */
-	z-index: 100;
-}
-/*.quicktabs-tabs li #quicktabs-tab-event_calendar_tabs-1 {
-	margin-left:114px;
-}
-.quicktabs-tabs li:hover #quicktabs-tab-event_calendar_tabs-1 {
-	margin-left:114px;
+	z-index: 10;
 }
 
-*/
 
 /* ========== HOMEPAGE NEWS ======== */
 #whats-happening {
