--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1688,14 +1688,19 @@ a.b-all:hover {
 }
 
 /* ----- LIBRARY ACCORDION----- */
+#quickset-library_accordion .ui-accordion-header{
+	min-width:175px;
+}
+#quickset-library_accordion .ui-accordion-content{	
+	min-width:175px;
+}
+
 #quickset-library_accordion .ui-accordion-content,
 #quickset-financial_aid .ui-accordion-content {
 	padding:10px 8px 20px 8px;
-	min-width:175px;
 }
 #quickset-library_accordion .ui-accordion-header,
 #quickset-financial_aid .ui-accordion-header{
-	min-width:175px;
 	margin-bottom:0px;
 	color:#f1f1f1;
 	border: 1px solid rgba(255,255,255,0.2);
@@ -1720,7 +1725,7 @@ a.b-all:hover {
 	text-decoration:none;
 }
 #quickset-library_accordion .ui-accordion-header:hover,
-#quickset-financial_aid .ui-accordion-header:hover{
+#quickset-financial_aid .ui-accordion-header:hover {
 	background: #466881; 
 }
 
