text color on accordion headings

--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1688,7 +1688,7 @@ a.b-all:hover {
 }
 
 /* ----- LIBRARY ACCORDION----- */
-#quickset-library_accordion .ui-accordion-header{
+#quickset-library_accordion h3.ui-accordion-header{
 	min-width:175px;
 }
 #quickset-library_accordion .ui-accordion-content{	
@@ -1700,7 +1700,7 @@ a.b-all:hover {
 	padding:10px 8px 20px 8px;
 }
 #quickset-library_accordion .ui-accordion-header,
-#quickset-financial_aid .ui-accordion-header{
+#quickset-financial_aid .ui-accordion-header {
 	margin-bottom:0px;
 	color:#f1f1f1;
 	border: 1px solid rgba(255,255,255,0.2);
@@ -1716,12 +1716,14 @@ a.b-all:hover {
 	position:relative;
 	behavior: url("js/PIE.htc");
 }
+#quickset-library_accordion h3.ui-accordion-header a,
+#quickset-financial_aid h3.ui-accordion-header a {
+	color: #f1f1f1; }
 #quickset-library_accordion h3.ui-accordion-header a:link, 
 #quickset-library_accordion h3.ui-accordion-header a:hover,
 #quickset-financial_aid h3.ui-accordion-header a:link, 
 #quickset-financial_aid h3.ui-accordion-header a:hover,
 {
-	color:#f1f1f1;
 	text-decoration:none;
 }
 #quickset-library_accordion .ui-accordion-header:hover,
