--- a/www/sites/all/themes/lynchburg/css/user-styles.css
+++ b/www/sites/all/themes/lynchburg/css/user-styles.css
@@ -548,7 +548,10 @@ table.surreptitious td ul.links {
   margin-bottom: 0;
 }
 
-
+tr.hover a {
+   cursor: pointer;
+   /* whatever other hover styles you want */
+}
 /* ========== EMPHASIS BOX STYLES ========== */
 .emphasis_box {
 	clear:both;
